[tool.poetry]
name = "llmgpuram"
version = "0.1.0"
description = ""
authors = ["Wei <macgnw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
yapf = "^0.43.0"
mypy = "^1.14.1"
pytest = "^8.3.4"
pyinstaller = "^6.11.1"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
